@@ -1,3 +1,7 @@
+ieatacid (5/25/09)
+-----------------
+- Fixed guild name bug
+
 ieatacid (5/20/09)
 -----------------
 - Updated version to 5.13.4
